[package]
name = "iss_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.13"}
tokio = { version = "1.20.1", features = ["full"] }
serde_json = "1.0.82"
serde = {version = "1.0.140", features = ["derive"] }
async-mutex = "1.4"
serde_derive = "1.0.126"
reqwest = { version = "0.11", features = ["blocking", "json"]}
chrono = {version = "0.4.23", features = ["serde"]}
satellite = { git = "https://github.com/richinfante/satellite-rs.git", branch = "master" }
tower = { version = "0.4.13", features = ["timeout", "limit", "buffer"] }
